fixes the issue of then the footer is covering content on the page

--- a/css/additional.css
+++ b/css/additional.css
@@ -1,5 +1,9 @@
+main.container {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 60px;
